# Linux_second_Assignment

./: CMakeLists.txt  README.md
source/cpp/: curve.cpp  main.cpp  mesh.cpp  node.cpp  point.cpp  vector.cpp
source/hpp/: curve.hpp  essential  mesh.hpp  node.hpp  point.hpp  vector.h  vector.hpp
